[project]
name = "scraper_common"
version = "0.1.0"
description = "Shared functionality for PAS scrapers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage>=3.1.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "structlog>=25.4.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper_common"]
