[project]
name = "tokscraper"
version = "0.1.0"
description = "Scrapes TikTok, unsurprisingly"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage>=3.1.1",
    "pas-log",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scraper-common",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "yt-dlp[default,curl-cffi]>=2025.12.8",
]

[tool.uv]
package = true

[tool.uv.sources]
pas-log = { workspace = true }
scraper-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["responses>=0.25.7"]

[tool.hatch.build.targets.wheel]
packages = ["tokscraper"]
