[project]
name = "tubescraper"
version = "0.1.0"
description = "Scrapes YouTube, unsurprisingly"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage>=3.1.1",
    "pas-log",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "structlog>=25.4.0",
    "yt-dlp>=2025.6.30",
]

[tool.uv]
package = true
   
[tool.uv.sources]
pas-log = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "responses>=0.25.7",
    "yt-dlp-types>=0.0.17",
]

[tool.hatch.build.targets.wheel]
packages = ["tubescraper"]
